--- a/src/Components/ActorCard.css
+++ b/src/Components/ActorCard.css
@@ -1,6 +1,16 @@
+.row {
+  margin: 20px;
+}
+
 .card {
   background-color: peachpuff;
-  margin-top: 20px;
+  /* margin-bottom: 20px; */
+  height: 100%;
+}
+
+.card-title {
+  cursor: pointer;
+  margin-bottom: 0;
 }
 
 .card > .card-img-top {
