--- a/src/Components/ActorCard.css
+++ b/src/Components/ActorCard.css
@@ -1,10 +1,12 @@
 .row {
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .card {
   background-color: peachpuff;
-  /* margin-bottom: 20px; */
+  min-width: 260px;
+  /* margin: 20px; */
+  /* padding-bottom: 20px; */
   height: 100%;
 }
 
