--- a/src/Components/ActorCard.css
+++ b/src/Components/ActorCard.css
@@ -1,9 +1,9 @@
-.row {
-  /* margin: 20px; */
+.col {
+  margin-top: 20px;
 }
 
 .card {
-  background-color: peachpuff;
+  background-color: beige;
   min-width: 260px;
   /* margin: 20px; */
   /* padding-bottom: 20px; */
