--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -1,20 +1,20 @@
-.actorCard {
+.movieCard {
   background-color: #343a40;
   color: whitesmoke;
   min-width: 260px;
   height: 100%;
 }
 
-.actorCard .card-header {
+.movieCard .card-header {
   background-color: #5a5e63;
 }
 
-.actorCard .card-title {
+.movieCard .card-title {
   cursor: pointer;
   margin-bottom: 0;
 }
 
-.actorCard > .card-img-top {
+.movieCard > .card-img-top {
   width: 50%;
   margin: auto;
   padding: 20px 0;
