--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -8,7 +8,17 @@
   position: relative;
   height: 100vh;
   margin: 0;
-  color: whitesmoke;
   text-align: center;
   font-family: "Sacramento", cursive;
+}
+
+.homepage-img h1 {
+  color: whitesmoke;
+  padding-top: 100px;
+  font-size: 10em;
+}
+
+.homepage-img p {
+  font-size: 3em;
+  color: aqua;
 }
