fix page not found home link

--- a/src/pages/PageNotFound/PageNotFound.css
+++ b/src/pages/PageNotFound/PageNotFound.css
@@ -17,6 +17,10 @@
   font-size: 10em;
 }
 
+.pagenotfound-img .nav-link {
+  display: inline-block;
+}
+
 .pagenotfound-img .nav-link:hover {
   color: aquamarine;
 }
