fix background image position

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,12 +1,7 @@
 .homepage-img {
-  background-image: url("pexels-travis-blessing.jpg");
-  background-color: #cccccc;
-  height: 500px;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("pexels-travis-blessing.jpg") no-repeat center fixed;
   background-size: cover;
-  position: relative;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   text-align: center;
 }
